# project_root

./: .env  .env.production  .gitignore  AUTONOMOUS_AI_ASSESSMENT.md  DOCS_BACKUP_POLICY.md  Dockerfile  Dockerfile.production  LOCAL_MANAGED.md  PHASE2_DEPLOYMENT_REPORT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_DEPLOYMENT_REPORT.md  PHASE4_DEPLOYMENT_REPORT.md  PR_body.md  README-RUN-DEMO.md  README.md  analysis.json  app.py  app.py.bak_20260504_112649  autonomous_rag_agent.py  config.json  convert_md_to_pdf.py  dashboard_app.py  devcontainer.json  docker-compose-redis-addon.yml  docker-compose-redis.yml  docker-compose.phase2-canary.yml  docker-compose.phase3-staging.yml  docker-compose.phase4-production.yml  docker-compose.production.yml  docker-compose.quick-alt.yml  docker-compose.quick.yml  docker-compose.yml  docs  docs_manager.py  fixes_core.patch  fixes_core_git.patch  main.py  manage_kb.py  monitor_phase2.sh  nginx-phase3.conf  (+7 more)
analyzer/: __init__.py  cli.py  collector.py  collector_cli.py  extractor.py  llm_client.py  metrics_exporter.py  prompt_wrapper.py  scanner.py  schema.py  summarizer.py  ui_streamlit.py  usage_logger.py
checkpoints/: checkpoint_registry.json
config/: .aignore  .dockerignore  .env.example  grafana_dashboard_esp.json  nginx-canary.conf  nginx-production.conf  nginx-staging.conf  prometheus.yml  prometheus_alerts.yml  sidebar_config.json
corpus/: bench.index  corpus_meta.json  (+7 more)
tests/backups/ui_no_compress/: manifest.json  pyproject.toml  requirements.txt
tests/backups/ui_no_compress/.streamlit/: credentials.toml  machine_id_v4
(+839 files in other folders)
